Implementação de comunicação com o firebase.
