# src/routes/blueskyRoutes.ts
@@ -5,6 +5,7 @@ import * as Sentry from '@sentry/node';
 import { protect } from '../middleware/authMiddleware';
 import { parseDataUrl } from '../utils/parsing';
 import sharp from 'sharp';
+import { BASE_DOCUMENT, db } from '../services/firebaseService';
 
 const router = Router();
 
@@ -34,16 +35,20 @@ interface BlueskyPostOptions {
     text: string;
     images?: string[];
     tags?: string[];
+    instanceId?: string;
+    postId?: string;
 }
 
 export async function handleBlueskyPost(options: BlueskyPostOptions) {
-    const { text, images, tags } = options;
+    const { text, images, tags, instanceId, postId } = options;
 
     if (!text && (!images || images.length === 0))
         throw new Error('Bluesky: É necessário fornecer texto ou imagens.');
 
     if (images && images.length > 4)
         throw new Error('Bluesky: É permitido no máximo 4 imagens por post no Bluesky.');
+
+    const dbRef = (instanceId && postId) ? db.ref(`${BASE_DOCUMENT}/${instanceId}/${postId}`) : null;
 
     try {
         await ensureAuthenticatedAgent();
@@ -56,7 +61,9 @@ export async function handleBlueskyPost(options: BlueskyPostOptions) {
 
         const postEmbeds = [];
 
-        if (images && images.length > 0) {
+        if (process.env.IGNORAR_POST)
+            Logger.warn(`[Bluesky] Ignorado o envio do post.`);
+        else if (images && images.length > 0) {
             Logger.info('[Bluesky] Fazendo upload de imagens para o Bluesky, com otimização...');
             for (const imageDataUrl of images) {
                 const parsedImage = parseDataUrl(imageDataUrl);
@@ -104,12 +111,20 @@ export async function handleBlueskyPost(options: BlueskyPostOptions) {
             };
         }
 
-        Logger.info('[Bluesky] Enviando o post para o Bluesky...');
-        const postResult = await agent.post(postPayload);
+        const postResult = process.env.IGNORAR_POST ? { cid: 1, message: `[Bluesky] Ignorado o envio do post.` } : await agent.post(postPayload);
+
+        if (dbRef)
+            await dbRef.update({ bluesky: { status: 'success', error: null, } });
+
+        Logger.info(`[Bluesky] Post criado com sucesso! ID: ${postResult.cid}`);
         return { success: true, data: postResult };
     } catch (error) {
         Logger.error('[Bluesky] Erro ao postar no Bluesky: %o', error);
         Sentry.captureException(error);
+
+        if (dbRef)
+            await dbRef.update({ bluesky: { status: 'error', error: (error && error instanceof Error ? error.message : 'Erro ao postar no Bluesky.') } });
+
         throw error;
     }
 }
@@ -127,6 +142,8 @@ export async function handleBlueskyPost(options: BlueskyPostOptions) {
  *                 * **`text`** (string, obrigatório): O conteúdo principal do post.
  *                 * **`images`** (array, opcional): Uma lista de até 4 imagens no formato Data URL (base64). Imagens maiores que o limite da plataforma (~976KB) serão automaticamente otimizadas.
  *                 * **`tags`** (array, opcional): Uma lista de tags que serão convertidas em hashtags e adicionadas ao final do texto.
+ *                 * **`instanceId`** (string, opcional): ID da instância do app cliente para rastreamento no Firebase.
+ *                 * **`postId`** (string, opcional): ID do post gerado pelo app cliente para rastreamento no Firebase.
  *                 
  *                 **Corpo da Resposta:**
  *                 * Retorna um objeto com os dados do post criado com sucesso (status `201 Created`).
@@ -145,19 +162,33 @@ export async function handleBlueskyPost(options: BlueskyPostOptions) {
  *                  text: { type: string }
  *                  images: { type: array, items: { type: base64 } }
  *                  tags: { type: array, items: { type: string } }
+ *                  instanceId: { type: string }
+ *                  postId: { type: string }
  *          example:
  *            text: "Este é um tweet de exemplo!"
  *            tags: ["api", "teste"]
  *            images: ["data:image/png;base64,iVBORw0KGgo..."]
+ *            instanceId: "asdffasdfFMaxwBvUw49LOjc2"
+ *            postId: "153"
  *    responses:
  *      '201':
  *        description: Post criado com sucesso.
  */
 router.post('/post', protect, async (req: Request, res: Response) => {
+    const { instanceId, postId } = req.body;
+    const dbRef = (instanceId && postId) ? db.ref(`${BASE_DOCUMENT}/${instanceId}/${postId}`) : null;
+
     try {
         const result = await handleBlueskyPost(req.body);
+
+        if (dbRef)
+            await dbRef.update({ bluesky: { status: 'success', error: null, } });
+
         res.status(201).json({ message: 'Post criado com sucesso!', ...result });
     } catch (error: any) {
+        if (dbRef)
+            await dbRef.update({ bluesky: { status: 'error', error: error.message || 'Erro ao postar no Bluesky.' } });
+
         res.status(500).json({ message: error.message || 'Erro ao postar no Bluesky.' });
     }
 });
